# fastp-gpu

./: .gitignore  .publish-meta  CMakeLists.txt  Makefile  README.md
.github/workflows/: zenodo-archive.yml
benchmark_results/: README.md  fastp-cpu-profile
benchmark_results/20260503_193146/: full_benchmark_20260503_193146.csv  full_status_20260503_193146.txt
benchmark_results/20260503_193146/resources/: resource_BS_HiSeq_SE_26.8G_d0bromir_cpu_T16_1777885667.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_cpu_T1_1777861232.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_cpu_T2_1777868564.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_cpu_T32_1777889744.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_cpu_T4_1777874189.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_cpu_T8_1777879713.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_gpu_T16_1777886160.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_gpu_T1_1777863712.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_gpu_T2_1777870009.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_gpu_T32_1777890206.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_gpu_T4_1777874999.csv  resource_BS_HiSeq_SE_26.8G_d0bromir_gpu_T8_1777881132.csv  resource_BS_HiSeq_SE_26.8G_opengene_T16_1777882500.csv  resource_BS_HiSeq_SE_26.8G_opengene_T1_1777858498.csv  resource_BS_HiSeq_SE_26.8G_opengene_T2_1777865744.csv  resource_BS_HiSeq_SE_26.8G_opengene_T32_1777886557.csv  resource_BS_HiSeq_SE_26.8G_opengene_T4_1777871205.csv  resource_BS_HiSeq_SE_26.8G_opengene_T8_1777875704.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_cpu_T1_1777837223.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_cpu_T2_1777837256.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_cpu_T4_1777837281.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_gpu_T16_1777837329.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_gpu_T1_1777837232.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_gpu_T2_1777837263.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_gpu_T32_1777837344.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_gpu_T4_1777837286.csv  resource_Panel_PDAC_PE_1.5M_d0bromir_gpu_T8_1777837311.csv  resource_Panel_PDAC_PE_1.5M_opengene_T1_1777837213.csv  resource_Panel_PDAC_PE_1.5M_opengene_T2_1777837244.csv  resource_Panel_PDAC_PE_1.5M_opengene_T4_1777837275.csv  resource_Panel_PDAC_PE_1M_d0bromir_cpu_T1_1777837113.csv  (+140 more)
benchmark_results/_tools/: download_bench_samples.sh  run_benchmark.sh  run_benchmark_wsl.sh
docs/: ARCHITECTURE.md  BUILD_WITH_CUDA.md  CUDA_ACCELERATION.md  INDEX.md  PERFORMANCE_SUMMARY.md  QUICK_REFERENCE.md  UPSTREAM_REJECTED.md  VERSION_MANAGEMENT.md
docs/publication/figures/: fig1_breakdown.csv  (+15 more)
scripts/: apply_rerun_timeouts.py  apply_t32_results.py  build_all.sh  check_status.sh  download_bench_samples.sh  generate_figures.py  pre_build.sh  publish_public.sh  release_public.sh  run_benchmark.sh  run_tests.sh  verify_public_publish.sh  version_manager.sh
src/: adaptertrimmer.cpp  bgzf_writer.cpp  bgzf_writer.h  common.h  cuda_error_check.h  cuda_gzip.cu  cuda_gzip.h  cuda_gzip_compress.cu  cuda_gzip_compress.h  cuda_stats.cu  cuda_stats.h  cuda_stats_stub.cpp  cuda_stats_wrapper.cpp  cuda_stats_wrapper.h  cuda_trim.cu  cuda_trim.h  cuda_unittest.cpp  cuda_unittest.h  fastqreader.cpp  fastqreader.h  filter.cpp  filter.h  gds_pipeline.cu  gds_pipeline.h  gds_reader.cpp  gds_reader.h  htmlreporter.cpp  main.cpp  options.cpp  options.h  overlapanalysis.cpp  peprocessor.cpp  peprocessor.h  profiling.cpp  profiling.h  read.cpp  read.h  readpool.cpp  readpool.h  repeatfinder.cpp  (+12 more)
(+570 files in other folders)
